--- a/projects/lib/projects.json
+++ b/projects/lib/projects.json
@@ -1,94 +1,62 @@
-// Array (12) = $1
-// 0
-// {title: "Lorem ipsum dolor sit.", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Lorem ipsum, dolor sit amet consectetur adipisicin… iste veniam reiciendis aperiam ab omnis quaerat."}
-// 1
-// {title: "Cumque, veritatis praesentium! Vel?", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Cum consectetur eos esse voluptatum, voluptates nu…ore. Laborum hic cumque non ullam necessitatibus!"}
-// 2
-// {title: "Aliquam minima sit quas!", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Blanditiis beatae, dignissimos voluptates quod fug…antium assumenda dignissimos voluptatum rerum ex."}
-// 3
-// {title: "Voluptate doloremque velit voluptatum.", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Ex ratione aut numquam facere accusantium repellat…nsequuntur voluptate maxime at? Eos, perferendis!"}
-// 4
-// {title: "Illo saepe nam iusto.", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Temporibus incidunt distinctio quo dolores tempore…iciatis nulla harum? Natus quo at sint excepturi."}
-// 5
-// {title: "Eius, ad? Repudiandae, ipsam.", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Dolorem animi et similique praesentium culpa est s…tum explicabo necessitatibus tempore nulla saepe."}
-// 6
-// {title: "Doloremque id sunt quibusdam?", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Exercitationem numquam nobis maiores suscipit est …emporibus blanditiis quibusdam impedit iste nisi."}
-// 7
-// {title: "Nesciunt dolore obcaecati quam.", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Iste deleniti iusto praesentium. Aperiam sit simil…itis culpa labore odit quos architecto provident?"}
-// 8
-// {title: "Velit officiis porro ab.", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Accusamus nisi aut esse non ratione aspernatur acc…s harum nam rerum eveniet in vero necessitatibus."}
-// 9
-// {title: "Similique facilis voluptatem doloremque!", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Eaque laborum sapiente molestiae dolor quis asperi… cum laborum optio deleniti est laboriosam dicta."}
-// 10
-// {title: "Autem natus quis aspernatur.", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Maiores, facilis provident alias sequi corrupti co…optio aperiam corporis sint culpa necessitatibus."}
-// 11
-// {title: "Quos aspernatur tempore officiis?", image: "https://vis-society.github.io/labs/2/images/empty.svg", description: "Consectetur excepturi explicabo modi ab, odit cons…ias reprehenderit non nemo expedita quaerat. Sit."}
-
-// Array Prototype
-
-{
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
-  {
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
-  {
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
-  {
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
-  {
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
-  {
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
-  {
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
-  {
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
-  {
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
-  {
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
-  {
-    "title": "Lorem ipsum dolor sit.",
-    "year": "2024",
-    "image": "https://dsc106.com/labs/lab02/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
-  },
+[
+	{
+		"title": "Lorem ipsum dolor sit.",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
+	},
+	{
+		"title": "Architecto minima sed omnis?",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Est, reiciendis aspernatur debitis maxime et itaque animi sit quod quo, tempore incidunt tempora dignissimos exercitationem enim numquam quam quaerat optio laborum ut unde hic delectus laboriosam? Quasi, cupiditate corporis."
+	},
+	{
+		"title": "Asperiores rem repellendus doloremque.",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Eligendi tenetur quae quos recusandae est. Cumque, voluptatem. Quo nihil dignissimos molestiae explicabo praesentium aspernatur debitis, illo rerum possimus quam ducimus earum nulla officiis maiores itaque repellat corporis soluta labore?"
+	},
+	{
+		"title": "Laudantium reprehenderit placeat perspiciatis.",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Quo minus perferendis nulla corrupti repellat dolorem dolore assumenda sit minima ducimus quidem ullam, id ipsa dicta tempora laborum officiis unde possimus cumque nobis alias inventore! Ullam repudiandae iusto nam."
+	},
+	{
+		"title": "Consequuntur autem eos facere.",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Laborum alias ea unde harum aspernatur? Molestiae, veritatis, possimus, numquam ex excepturi quod ducimus sit odit optio quibusdam sequi aliquid itaque tempore perspiciatis placeat expedita vero voluptates. Sit, aspernatur sint!"
+	},
+	{
+		"title": "Quos sint quaerat omnis?",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Est neque, velit nam rerum error odio voluptates voluptatem magnam laboriosam ad? Doloribus, id et itaque unde porro totam ullam quaerat blanditiis odit animi eveniet aut, voluptate velit iure odio."
+	},
+	{
+		"title": "Iste ipsam magni fuga!",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Velit omnis suscipit nemo quia? Iste maiores numquam labore quia nemo eveniet odit, modi magnam? Architecto officia sint est. Architecto iste minima consequuntur explicabo illo error sed at dolore nostrum!"
+	},
+	{
+		"title": "Ipsum, aperiam magni? Nobis.",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Delectus magni, vel, quod mollitia hic rem temporibus, sint doloribus tenetur qui dolores tempore quisquam fuga nobis recusandae molestiae ipsum nostrum maxime eaque dicta aperiam eum quas beatae. At, neque."
+	},
+	{
+		"title": "Dicta nihil odit illo?",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Vitae quos laudantium officiis rerum, accusamus delectus aspernatur quas nulla, magni sed, excepturi saepe incidunt laboriosam alias at aliquam atque quisquam autem nesciunt. Minus, reprehenderit odit nam illo natus aspernatur?"
+	},
+	{
+		"title": "Vel earum nulla facilis.",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Aut voluptatem sint atque corrupti accusamus necessitatibus possimus et, itaque nulla id deleniti nemo repellendus asperiores molestias laudantium, mollitia ad dicta. Laboriosam, itaque. Quos corporis, perferendis natus officiis beatae qui."
+	},
+	{
+		"title": "Nobis iste neque quaerat.",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Quos, recusandae, sit rerum velit nostrum nihil quisquam tempora repellat sed quibusdam facilis. Assumenda quaerat ab, nesciunt odio facere sit, ipsa necessitatibus tempora, maiores commodi sed quae provident deserunt at?"
+	},
+	{
+		"title": "Iusto, incidunt. Totam, illum.",
+		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
+		"description": "Tempore, eveniet minus velit, earum aperiam necessitatibus repellendus provident accusamus illum officiis doloribus, eum saepe est aut numquam distinctio pariatur natus totam repellat. Numquam nulla libero sapiente magnam nostrum ex."
+	}
+]
